# FastAPI_Project

./: .coverage  .env  .gitignore  Makefile  README.md  database.db  pyproject.toml
migrations/versions/: 2aa67dc6c501_2_add_updated_at_date.py  6bf9b1df11b6_1_create_user_table.py
src/fast_zero/: app.py  database.db  database.py  models.py  schemas.py  security.py  settings.py
src/fast_zero/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_user.py
